force-app/main/default/objects/Invoice_position__c/Invoice_position__c.object-meta.xml
<CustomObject>
    <label>Invoice position</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Invoice position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>