force-app/main/default/objects/Invoice_position__c/fields/Positiondescription__c.field-meta.xml
<CustomField>
    <fullName>Positiondescription__c</fullName>
    <label>Position description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>