force-app/main/default/objects/Invoice_position__c/fields/Sum__c.field-meta.xml
<CustomField>
    <fullName>Sum__c</fullName>
    <description>Total sum of position.</description>
    <formula>Quantity__c *  Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>