force-app/main/default/objects/Invoice_position__c/validationRules/Must_have_same_currency_as_parent_invoic.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_same_currency_as_parent_invoic</fullName>
    <active>true</active>
    <description>Position has to have the same currency as parent invoice.</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode) !=  TEXT(Invoice__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Can&apos;t have a different currency than parent invoice.</errorMessage>
</ValidationRule>